# Syukatsu

./: README.md
Research/Program/AMAM_2023/: README.md  pyproject.toml
Research/Program/AMAM_2023/amam_2023/: AnalyzeCrawling.py
Research/Program/AMAM_2023/amam_2023/analyze/: Analyze.py
Research/Program/AMAM_2023/amam_2023/calibration/: mark_calibration.py
Research/Program/AMAM_2023/amam_2023/data/calibration/: cal.pkl
Research/Program/AMAM_2023/amam_2023/data/coordinates/: f02_s1_cam02_1213_free1.csv
Research/Program/AMAM_2023/amam_2023/plot/: CoordinatesPlot.py  ResultPlot.py  tool.py
Research/Program/AMAM_2023/amam_2023/preprocessing/: Preprocess.py
Research/Program/MultiCameraCapture-main/: .gitignore  CMakeLists.txt  README.md  camera_setting.json  main.cpp
TakoMikoshi/: README.md
