[tool.poetry]
name = "amam-2023"
version = "0.1.0"
description = ""
authors = ["ergyao <ryosuke-323@docomo.ne.jp>"]
readme = "README.md"
packages = [{include = "amam_2023"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pandas = "1.5.2"
scikit-learn = "^1.3.0"
matplotlib = "^3.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
